# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: project-check.yml
gendiff/: cli.py  data_parser.py  gen_diff.py  generate_diff.py  parser.py
gendiff/formatters/: get_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_ge_diff.py  test_gen_diff.py  test_generate_diff.py
