[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Александр Стукалов <james_777@mail.ru>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
